# distributeddatamgr_datamgr_service

./: .gitattributes  2149.diff.txt  3178.diff.txt  AGENT.md  AGENTS.md  BUILD.gn  CLAUDE.md  Cargo.toml  OAT.xml  README.md  README_zh.md  bundle.json  cfi_blocklist.txt  datamgr_service.gni  distributeddatamgr.gni  hisysevent.yaml  service.diff
frameworks/innerkitsimpl/distributeddatafwk/test/: BUILD.gn
interfaces/innerkits/distributeddata/: BUILD.gn
interfaces/innerkits/distributeddata/include/: blob.h  change_notification.h  data_query.h  device_status_change_listener.h  distributed_kv_data_manager.h  kv_utils.h  kvstore.h  kvstore_observer.h  kvstore_snapshot.h  kvstore_sync_callback.h  single_kvstore.h  store_errno.h  types.h
services/data_mining_service/: BUILD.gn  data_mining_etl_service.cfg  data_mining_etl_service.cpp  data_mining_etl_service.h
services/data_mining_service/include/ipc/: etl_service_ipc.h  etl_service_proxy.h  etl_service_stub.h
services/data_mining_service/include/runtime/: operator_proxy.h  pipeline_runtime.h  sink_proxy.h
services/data_mining_service/include/service/: etl_runtime_manager.h
services/data_mining_service/sa_profile/: 1311.json
services/data_mining_service/src/ipc/: etl_service_proxy.cpp  etl_service_stub.cpp
services/data_mining_service/src/runtime/: operator_proxy.cpp  pipeline_runtime.cpp  sink_proxy.cpp
services/data_mining_service/src/service/: etl_runtime_manager.cpp
services/distributeddataservice/adapter/: BUILD.gn
services/distributeddataservice/adapter/account/: BUILD.gn
services/distributeddataservice/adapter/auth/: BUILD.gn
services/distributeddataservice/adapter/autils/: BUILD.gn
services/distributeddataservice/adapter/battery_state/: BUILD.gn  battery_state_monitor_impl.cpp  battery_state_monitor_impl.h
services/distributeddataservice/adapter/bms/: BUILD.gn  bms_delegate_impl.cpp  bms_delegate_impl.h
services/distributeddataservice/adapter/broadcaster/: BUILD.gn
services/distributeddataservice/adapter/bundle_mgr/: BUILD.gn  bundle_mgr_adapter.cpp  bundle_mgr_adapter.h  bundlemgr_adapter.cpp
services/distributeddataservice/adapter/communicator/: BUILD.gn
services/distributeddataservice/adapter/dfx/: BUILD.gn
services/distributeddataservice/adapter/network/: BUILD.gn
services/distributeddataservice/adapter/permission/: BUILD.gn
services/distributeddataservice/adapter/power_manager/: BUILD.gn  power_manager_impl.cpp  power_manager_impl.h
services/distributeddataservice/adapter/qos/: BUILD.gn
services/distributeddataservice/adapter/schema_helper/: BUILD.gn  get_schema_helper.cpp  get_schema_helper.h
services/distributeddataservice/adapter/screen/: BUILD.gn  screen.cpp  screen.h
services/distributeddataservice/adapter/screenlock/: BUILD.gn  screen_lock.cpp  screen_lock.h
services/distributeddataservice/adapter/security/: BUILD.gn
services/distributeddataservice/adapter/test/: BUILD.gn
services/distributeddataservice/adapter/utils/: BUILD.gn
services/distributeddataservice/app/: BUILD.gn  distributed_data.cfg  distributed_data.rc
services/distributeddataservice/app/src/: backup_handler.cpp  backup_handler.h  db_info_handle_impl.cpp  db_info_handle_impl.h  device_change_listener_impl.cpp  device_change_listener_impl.h  device_kvstore_impl.cpp  device_kvstore_impl.h  device_kvstore_observer_impl.cpp  device_kvstore_observer_impl.h  device_kvstore_resultset_impl.cpp  device_kvstore_resultset_impl.h  dump_helper.cpp  dump_helper.h  feature_stub_impl.cpp  feature_stub_impl.h  hidump_helper.cpp  hidump_helper.h  kvstore_account_observer.cpp  kvstore_account_observer.h  kvstore_app_accessor.cpp  kvstore_app_accessor.h  kvstore_app_manager.cpp  kvstore_app_manager.h  kvstore_data_service.cpp  kvstore_data_service.h  kvstore_data_service_stub.cpp  kvstore_data_service_stub.h  kvstore_device_listener.cpp  kvstore_device_listener.h  kvstore_impl.cpp  kvstore_impl.h  kvstore_meta_manager.cpp  kvstore_meta_manager.h  kvstore_observer_impl.cpp  kvstore_observer_impl.h  kvstore_resultset_impl.cpp  kvstore_resultset_impl.h  kvstore_screen_observer.cpp  kvstore_screen_observer.h  (+10 more)
services/distributeddataservice/app/test/: BUILD.gn
services/distributeddataservice/framework/: BUILD.gn
services/distributeddataservice/framework/access_check/: app_access_check_config_manager.cpp
services/distributeddataservice/framework/account/: account_delegate.cpp
services/distributeddataservice/framework/app_id_mapping/: app_id_mapping_config_manager.cpp
services/distributeddataservice/framework/backuprule/: backup_rule_manager.cpp
services/distributeddataservice/framework/battery_state/: battery_state_monitor.cpp
services/distributeddataservice/framework/bms/: bms_delegate.cpp
services/distributeddataservice/framework/changeevent/: gen_change_event.cpp  remote_change_event.cpp
services/distributeddataservice/framework/checker/: checker_manager.cpp
services/distributeddataservice/framework/cloud/: asset_loader.cpp  cloud_config_manager.cpp  cloud_conflict_handler.cpp  cloud_db.cpp  cloud_db_sync_config.cpp  cloud_event.cpp  cloud_extra_data.cpp  cloud_info.cpp  cloud_last_sync_info.cpp  cloud_lock_event.cpp  cloud_mark.cpp  cloud_report.cpp  cloud_server.cpp  cloud_share_event.cpp  cloud_sync_finished_event.cpp  cloud_water_mark.cpp  make_query_event.cpp  query_shared_resource_event.cpp  rdb_share_event.cpp  schema_meta.cpp  share_event.cpp  sharing_center.cpp  store_message.cpp  subscription.cpp  sync_event.cpp  sync_strategy.cpp
services/distributeddataservice/framework/communication/: connect_manager.cpp
services/distributeddataservice/framework/crypto/: crypto_manager.cpp
services/distributeddataservice/framework/device_manager/: device_manager_delegate.cpp
services/distributeddataservice/framework/device_sync_app/: device_sync_app_manager.cpp
services/distributeddataservice/service/: BUILD.gn
services/distributeddataservice/test/: BUILD.gn
test/distributedtest/single_kvstore_client/: BUILD.gn
test/fuzztest/dfx_fuzzer/: BUILD.gn  dfx_fuzzer.cpp  dfx_fuzzer.h
(+2356 files in other folders)
