# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kv_store_path = "//foundation/distributeddatamgr/kv_store"

relational_store_path = "//foundation/distributeddatamgr/relational_store"

relational_store_inner_api_path =
    "${relational_store_path}/interfaces/inner_api/rdb"

kv_store_common_path = "${kv_store_path}/frameworks/common"

kv_store_distributeddb_path = "${kv_store_path}/frameworks/libs/distributeddb"

dsoftbus_core_path = "//foundation/communication/dsoftbus/core/common/include"

datashare_path = "//foundation/distributeddatamgr/data_share"

ipc_core_path = "//foundation/communication/ipc/interfaces/innerkits/ipc_core"

device_manager_path = "//foundation/distributedhardware/device_manager"

file_service_path = "//foundation/filemanagement/app_file_service"

data_service_path = "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice"

udmf_path = "//foundation/distributeddatamgr/udmf"

dataobject_path = "//foundation/distributeddatamgr/data_object"

declare_args() {
  datamgr_service_power = true
  if (!defined(global_parts_info.power_manager_native_powermgr_client) ||
      !defined(global_parts_info.battery_manager_native_batterysrv_client)) {
    datamgr_service_power = false
  }

  if (!defined(global_parts_info) ||
      defined(global_parts_info.account_os_account)) {
    os_account_part_is_enabled = true
  } else {
    os_account_part_is_enabled = false
  }

  datamgr_service_config = true

  datamgr_service_udmf = false
}
